export const snapshot = {};

snapshot[`\$uint8 1`] = `
Map {
  0 => [
      "00 ",
    ],
  1 => [
      "01 ",
    ],
  255 => [
      "ff ",
    ],
}
`;

snapshot[`\$uint16le 1`] = `
Map {
  0 => [
      "00 00 ",
    ],
  1 => [
      "01 00 ",
    ],
  255 => [
      "ff 00 ",
    ],
  65535 => [
      "ff ff ",
    ],
}
`;

snapshot[`\$uint16be 1`] = `
Map {
  0 => [
      "00 00 ",
    ],
  1 => [
      "00 01 ",
    ],
  255 => [
      "00 ff ",
    ],
  65535 => [
      "ff ff ",
    ],
}
`;

snapshot[`\$uint32le 1`] = `
Map {
  0 => [
      "00 00 00 00 ",
    ],
  1 => [
      "01 00 00 00 ",
    ],
  255 => [
      "ff 00 00 00 ",
    ],
  4294967295 => [
      "ff ff ff ff ",
    ],
  65535 => [
      "ff ff 00 00 ",
    ],
}
`;

snapshot[`\$uint32be 1`] = `
Map {
  0 => [
      "00 00 00 00 ",
    ],
  1 => [
      "00 00 00 01 ",
    ],
  255 => [
      "00 00 00 ff ",
    ],
  4294967295 => [
      "ff ff ff ff ",
    ],
  65535 => [
      "00 00 ff ff ",
    ],
}
`;

snapshot[`\$int8 1`] = `
Map {
  -1 => [
      "ff ",
    ],
  -128 => [
      "80 ",
    ],
  0 => [
      "00 ",
    ],
  1 => [
      "01 ",
    ],
  127 => [
      "7f ",
    ],
}
`;

snapshot[`\$int16le 1`] = `
Map {
  -1 => [
      "ff ff ",
    ],
  -128 => [
      "80 ff ",
    ],
  -32768 => [
      "00 80 ",
    ],
  0 => [
      "00 00 ",
    ],
  1 => [
      "01 00 ",
    ],
  127 => [
      "7f 00 ",
    ],
  32767 => [
      "ff 7f ",
    ],
}
`;

snapshot[`\$int16be 1`] = `
Map {
  -1 => [
      "ff ff ",
    ],
  -128 => [
      "ff 80 ",
    ],
  -32768 => [
      "80 00 ",
    ],
  0 => [
      "00 00 ",
    ],
  1 => [
      "00 01 ",
    ],
  127 => [
      "00 7f ",
    ],
  32767 => [
      "7f ff ",
    ],
}
`;

snapshot[`\$int32le 1`] = `
Map {
  -1 => [
      "ff ff ff ff ",
    ],
  -128 => [
      "80 ff ff ff ",
    ],
  -2147483648 => [
      "00 00 00 80 ",
    ],
  -32768 => [
      "00 80 ff ff ",
    ],
  0 => [
      "00 00 00 00 ",
    ],
  1 => [
      "01 00 00 00 ",
    ],
  127 => [
      "7f 00 00 00 ",
    ],
  2147483647 => [
      "ff ff ff 7f ",
    ],
  32767 => [
      "ff 7f 00 00 ",
    ],
}
`;

snapshot[`\$int32be 1`] = `
Map {
  -1 => [
      "ff ff ff ff ",
    ],
  -128 => [
      "ff ff ff 80 ",
    ],
  -2147483648 => [
      "80 00 00 00 ",
    ],
  -32768 => [
      "ff ff 80 00 ",
    ],
  0 => [
      "00 00 00 00 ",
    ],
  1 => [
      "00 00 00 01 ",
    ],
  127 => [
      "00 00 00 7f ",
    ],
  2147483647 => [
      "7f ff ff ff ",
    ],
  32767 => [
      "00 00 7f ff ",
    ],
}
`;

snapshot[`\$float32le 1`] = `
Map {
  0 => [
      "00 00 00 00 ",
    ],
  0.0000152587890625 => [
      "00 00 80 37 ",
    ],
  0.0078125 => [
      "00 00 00 3c ",
    ],
  0.015625 => [
      "00 00 80 3c ",
    ],
  1 => [
      "00 00 80 3f ",
    ],
  1.25 => [
      "00 00 a0 3f ",
    ],
  154320.875 => [
      "38 b4 16 48 ",
    ],
  2.3283064365386963e-10 => [
      "00 00 80 2f ",
    ],
  3.8125 => [
      "00 00 74 40 ",
    ],
  30.75 => [
      "00 00 f6 41 ",
    ],
}
`;

snapshot[`\$float32be 1`] = `
Map {
  0 => [
      "00 00 00 00 ",
    ],
  0.0000152587890625 => [
      "37 80 00 00 ",
    ],
  0.0078125 => [
      "3c 00 00 00 ",
    ],
  0.015625 => [
      "3c 80 00 00 ",
    ],
  1 => [
      "3f 80 00 00 ",
    ],
  1.25 => [
      "3f a0 00 00 ",
    ],
  154320.875 => [
      "48 16 b4 38 ",
    ],
  2.3283064365386963e-10 => [
      "2f 80 00 00 ",
    ],
  3.8125 => [
      "40 74 00 00 ",
    ],
  30.75 => [
      "41 f6 00 00 ",
    ],
}
`;

snapshot[`\$float64le 1`] = `
Map {
  0 => [
      "00 00 00 00 00 00 00 00 ",
    ],
  0.0000152587890625 => [
      "00 00 00 00 00 00 f0 3e ",
    ],
  0.0078125 => [
      "00 00 00 00 00 00 80 3f ",
    ],
  0.015625 => [
      "00 00 00 00 00 00 90 3f ",
    ],
  1 => [
      "00 00 00 00 00 00 f0 3f ",
    ],
  1.25 => [
      "00 00 00 00 00 00 f4 3f ",
    ],
  154320.875 => [
      "00 00 00 00 87 d6 02 41 ",
    ],
  2.3283064365386963e-10 => [
      "00 00 00 00 00 00 f0 3d ",
    ],
  3.8125 => [
      "00 00 00 00 00 80 0e 40 ",
    ],
  30.75 => [
      "00 00 00 00 00 c0 3e 40 ",
    ],
}
`;

snapshot[`\$float64be 1`] = `
Map {
  0 => [
      "00 00 00 00 00 00 00 00 ",
    ],
  0.0000152587890625 => [
      "3e f0 00 00 00 00 00 00 ",
    ],
  0.0078125 => [
      "3f 80 00 00 00 00 00 00 ",
    ],
  0.015625 => [
      "3f 90 00 00 00 00 00 00 ",
    ],
  1 => [
      "3f f0 00 00 00 00 00 00 ",
    ],
  1.25 => [
      "3f f4 00 00 00 00 00 00 ",
    ],
  154320.875 => [
      "41 02 d6 87 00 00 00 00 ",
    ],
  2.3283064365386963e-10 => [
      "3d f0 00 00 00 00 00 00 ",
    ],
  3.8125 => [
      "40 0e 80 00 00 00 00 00 ",
    ],
  30.75 => [
      "40 3e c0 00 00 00 00 00 ",
    ],
}
`;

snapshot[`\$number 1`] = `
Map {
  -1.234 => [
      "58 39 b4 c8 76 be f3 bf ",
    ],
  -9007199254740991 => [
      "ff ff ff ff ff ff 3f c3 ",
    ],
  -Infinity => [
      "00 00 00 00 00 00 f0 ff ",
    ],
  0 => [
      "00 00 00 00 00 00 00 00 ",
    ],
  0.7071067811865476 => [
      "cd 3b 7f 66 9e a0 e6 3f ",
    ],
  1 => [
      "00 00 00 00 00 00 f0 3f ",
    ],
  1.048576e+26 => [
      "40 8c b5 78 1d af 55 45 ",
    ],
  1.4142135623730951 => [
      "cd 3b 7f 66 9e a0 f6 3f ",
    ],
  1.7976931348623157e+308 => [
      "ff ff ff ff ff ff ef 7f ",
    ],
  1000 => [
      "00 00 00 00 00 40 8f 40 ",
    ],
  1048576 => [
      "00 00 00 00 00 00 30 41 ",
    ],
  2.220446049250313e-16 => [
      "00 00 00 00 00 00 b0 3c ",
    ],
  2.718281828459045 => [
      "69 57 14 8b 0a bf 05 40 ",
    ],
  3.141592653589793 => [
      "18 2d 44 54 fb 21 09 40 ",
    ],
  5e-324 => [
      "01 00 00 00 00 00 00 00 ",
    ],
  9007199254740991 => [
      "ff ff ff ff ff ff 3f 43 ",
    ],
  Infinity => [
      "00 00 00 00 00 00 f0 7f ",
    ],
  NaN => [
      "01 00 00 00 00 00 f0 7f ",
    ],
}
`;

snapshot[`\$boolean 1`] = `
Map {
  false => [
      "00 ",
    ],
  true => [
      "01 ",
    ],
}
`;

snapshot[`\$string 1`] = `
Map {
  "" => [
      "00 00 00 00 ",
    ],
  "<NULLBYTEALERT>\\x00</NULLBYTEALERT>" => [
      "20 00 00 00 3c 4e 55 4c 4c 42 59 54 45 41 4c 45",
      "52 54 3e 00 3c 2f 4e 55 4c 4c 42 59 54 45 41 4c",
      "45 52 54 3e ",
    ],
  "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum." => [
      "bd 01 00 00 4c 6f 72 65 6d 20 69 70 73 75 6d 20",
      "64 6f 6c 6f 72 20 73 69 74 20 61 6d 65 74 2c 20",
      "63 6f 6e 73 65 63 74 65 74 75 72 20 61 64 69 70",
      "69 73 63 69 6e 67 20 65 6c 69 74 2c 20 73 65 64",
      "20 64 6f 20 65 69 75 73 6d 6f 64 20 74 65 6d 70",
      "6f 72 20 69 6e 63 69 64 69 64 75 6e 74 20 75 74",
      "20 6c 61 62 6f 72 65 20 65 74 20 64 6f 6c 6f 72",
      "65 20 6d 61 67 6e 61 20 61 6c 69 71 75 61 2e 20",
      "55 74 20 65 6e 69 6d 20 61 64 20 6d 69 6e 69 6d",
      "20 76 65 6e 69 61 6d 2c 20 71 75 69 73 20 6e 6f",
      "73 74 72 75 64 20 65 78 65 72 63 69 74 61 74 69",
      "6f 6e 20 75 6c 6c 61 6d 63 6f 20 6c 61 62 6f 72",
      "69 73 20 6e 69 73 69 20 75 74 20 61 6c 69 71 75",
      "69 70 20 65 78 20 65 61 20 63 6f 6d 6d 6f 64 6f",
      "20 63 6f 6e 73 65 71 75 61 74 2e 20 44 75 69 73",
      "20 61 75 74 65 20 69 72 75 72 65 20 64 6f 6c 6f",
      "72 20 69 6e 20 72 65 70 72 65 68 65 6e 64 65 72",
      "69 74 20 69 6e 20 76 6f 6c 75 70 74 61 74 65 20",
      "76 65 6c 69 74 20 65 73 73 65 20 63 69 6c 6c 75",
      "6d 20 64 6f 6c 6f 72 65 20 65 75 20 66 75 67 69",
      "61 74 20 6e 75 6c 6c 61 20 70 61 72 69 61 74 75",
      "72 2e 20 45 78 63 65 70 74 65 75 72 20 73 69 6e",
      "74 20 6f 63 63 61 65 63 61 74 20 63 75 70 69 64",
      "61 74 61 74 20 6e 6f 6e 20 70 72 6f 69 64 65 6e",
      "74 2c 20 73 75 6e 74 20 69 6e 20 63 75 6c 70 61",
      "20 71 75 69 20 6f 66 66 69 63 69 61 20 64 65 73",
      "65 72 75 6e 74 20 6d 6f 6c 6c 69 74 20 61 6e 69",
      "6d 20 69 64 20 65 73 74 20 6c 61 62 6f 72 75 6d",
      "2e ",
    ],
  "abc" => [
      "03 00 00 00 61 62 63 ",
    ],
  "def" => [
      "03 00 00 00 64 65 66 ",
    ],
  "xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx" => [
      "2a 00 00 00 78 78 78 78 78 78 78 78 78 78 78 78",
      "78 78 78 78 78 78 78 78 78 78 78 78 78 78 78 78",
      "78 78 78 78 78 78 78 78 78 78 78 78 78 78 ",
    ],
  "xyz" => [
      "03 00 00 00 78 79 7a ",
    ],
}
`;

snapshot[`\$json 1`] = `
Map {
  {
      "123": 456,
      abc: "def",
    } => [
      "17 00 00 00 7b 22 31 32 33 22 3a 34 35 36 2c 22",
      "61 62 63 22 3a 22 64 65 66 22 7d ",
    ],
}
`;

snapshot[`\$unknown 1`] = `
Map {
  {
      cube: {
        faces: [
          {
            points: [
              {
                type: "Vector3",
                x: 1,
                y: 1,
                z: 1,
              },
              {
                type: "Vector3",
                x: -1,
                y: 1,
                z: 1,
              },
              {
                type: "Vector3",
                x: 1,
                y: -1,
                z: 1,
              },
            ],
            type: "Face",
          },
          {
            points: [
              {
                type: "Vector3",
                x: -1,
                y: -1,
                z: 1,
              },
              {
                type: "Vector3",
                x: 1,
                y: -1,
                z: 1,
              },
              {
                type: "Vector3",
                x: -1,
                y: 1,
                z: 1,
              },
            ],
            type: "Face",
          },
          {
            points: [
              {
                type: "Vector3",
                x: 1,
                y: -1,
                z: -1,
              },
              {
                type: "Vector3",
                x: -1,
                y: 1,
                z: -1,
              },
              {
                type: "Vector3",
                x: 1,
                y: 1,
                z: -1,
              },
            ],
            type: "Face",
          },
          {
            points: [
              {
                type: "Vector3",
                x: -1,
                y: 1,
                z: -1,
              },
              {
                type: "Vector3",
                x: 1,
                y: -1,
                z: -1,
              },
              {
                type: "Vector3",
                x: -1,
                y: -1,
                z: -1,
              },
            ],
            type: "Face",
          },
          {
            points: [
              {
                type: "Vector3",
                x: 1,
                y: 1,
                z: -1,
              },
              {
                type: "Vector3",
                x: -1,
                y: 1,
                z: 1,
              },
              {
                type: "Vector3",
                x: 1,
                y: 1,
                z: 1,
              },
            ],
            type: "Face",
          },
          {
            points: [
              {
                type: "Vector3",
                x: -1,
                y: 1,
                z: -1,
              },
              {
                type: "Vector3",
                x: -1,
                y: 1,
                z: 1,
              },
              {
                type: "Vector3",
                x: 1,
                y: 1,
                z: -1,
              },
            ],
            type: "Face",
          },
          {
            points: [
              {
                type: "Vector3",
                x: 1,
                y: -1,
                z: -1,
              },
              {
                type: "Vector3",
                x: 1,
                y: -1,
                z: 1,
              },
              {
                type: "Vector3",
                x: -1,
                y: -1,
                z: 1,
              },
            ],
            type: "Face",
          },
          {
            points: [
              {
                type: "Vector3",
                x: 1,
                y: -1,
                z: -1,
              },
              {
                type: "Vector3",
                x: -1,
                y: -1,
                z: 1,
              },
              {
                type: "Vector3",
                x: -1,
                y: -1,
                z: -1,
              },
            ],
            type: "Face",
          },
          {
            points: [
              {
                type: "Vector3",
                x: -1,
                y: 1,
                z: 1,
              },
              {
                type: "Vector3",
                x: -1,
                y: -1,
                z: -1,
              },
              {
                type: "Vector3",
                x: -1,
                y: -1,
                z: 1,
              },
            ],
            type: "Face",
          },
          {
            points: [
              {
                type: "Vector3",
                x: -1,
                y: 1,
                z: -1,
              },
              {
                type: "Vector3",
                x: -1,
                y: -1,
                z: -1,
              },
              {
                type: "Vector3",
                x: -1,
                y: 1,
                z: 1,
              },
            ],
            type: "Face",
          },
          {
            points: [
              {
                type: "Vector3",
                x: 1,
                y: 1,
                z: -1,
              },
              {
                type: "Vector3",
                x: 1,
                y: 1,
                z: 1,
              },
              {
                type: "Vector3",
                x: 1,
                y: -1,
                z: 1,
              },
            ],
            type: "Face",
          },
          {
            points: [
              {
                type: "Vector3",
                x: 1,
                y: -1,
                z: -1,
              },
              {
                type: "Vector3",
                x: 1,
                y: 1,
                z: -1,
              },
              {
                type: "Vector3",
                x: 1,
                y: -1,
                z: 1,
              },
            ],
            type: "Face",
          },
        ],
        type: "Mesh",
      },
      lorem: "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.",
      map: Map {
        "e" => "east",
        "n" => "north",
        "s" => "south",
        "soggy waffles" => "never eat them",
        "w" => "west",
      },
      null: null,
      origin: {
        type: "Vector3",
        x: 0,
        y: 0,
        z: 0,
      },
      set: Set {
        11,
        2,
        3,
        5,
        7,
      },
      undefined: undefined,
      x: "abc",
      y: 123,
      z: [
        NaN,
        NaN,
        NaN,
        NaN,
        NaN,
        NaN,
        NaN,
        NaN,
        NaN,
        NaN,
        NaN,
        NaN,
        NaN,
        "Batman!",
      ],
    } => [
      "06 00 00 00 6f 62 6a 65 63 74 0a 00 00 00 01 00",
      "00 00 78 06 00 00 00 73 74 72 69 6e 67 03 00 00",
      "00 61 62 63 01 00 00 00 79 06 00 00 00 6e 75 6d",
      "62 65 72 00 00 00 00 00 c0 5e 40 01 00 00 00 7a",
      "05 00 00 00 41 72 72 61 79 0e 00 00 00 06 00 00",
      "00 6e 75 6d 62 65 72 01 00 00 00 00 00 f0 7f 06",
      "00 00 00 6e 75 6d 62 65 72 01 00 00 00 00 00 f0",
      "7f 06 00 00 00 6e 75 6d 62 65 72 01 00 00 00 00",
      "00 f0 7f 06 00 00 00 6e 75 6d 62 65 72 01 00 00",
      "00 00 00 f0 7f 06 00 00 00 6e 75 6d 62 65 72 01",
      "00 00 00 00 00 f0 7f 06 00 00 00 6e 75 6d 62 65",
      "72 01 00 00 00 00 00 f0 7f 06 00 00 00 6e 75 6d",
      "62 65 72 01 00 00 00 00 00 f0 7f 06 00 00 00 6e",
      "75 6d 62 65 72 01 00 00 00 00 00 f0 7f 06 00 00",
      "00 6e 75 6d 62 65 72 01 00 00 00 00 00 f0 7f 06",
      "00 00 00 6e 75 6d 62 65 72 01 00 00 00 00 00 f0",
      "7f 06 00 00 00 6e 75 6d 62 65 72 01 00 00 00 00",
      "00 f0 7f 06 00 00 00 6e 75 6d 62 65 72 01 00 00",
      "00 00 00 f0 7f 06 00 00 00 6e 75 6d 62 65 72 01",
      "00 00 00 00 00 f0 7f 06 00 00 00 73 74 72 69 6e",
      "67 07 00 00 00 42 61 74 6d 61 6e 21 05 00 00 00",
      "6c 6f 72 65 6d 06 00 00 00 73 74 72 69 6e 67 bd",
      "01 00 00 4c 6f 72 65 6d 20 69 70 73 75 6d 20 64",
      "6f 6c 6f 72 20 73 69 74 20 61 6d 65 74 2c 20 63",
      "6f 6e 73 65 63 74 65 74 75 72 20 61 64 69 70 69",
      "73 63 69 6e 67 20 65 6c 69 74 2c 20 73 65 64 20",
      "64 6f 20 65 69 75 73 6d 6f 64 20 74 65 6d 70 6f",
      "72 20 69 6e 63 69 64 69 64 75 6e 74 20 75 74 20",
      "6c 61 62 6f 72 65 20 65 74 20 64 6f 6c 6f 72 65",
      "20 6d 61 67 6e 61 20 61 6c 69 71 75 61 2e 20 55",
      "74 20 65 6e 69 6d 20 61 64 20 6d 69 6e 69 6d 20",
      "76 65 6e 69 61 6d 2c 20 71 75 69 73 20 6e 6f 73",
      "74 72 75 64 20 65 78 65 72 63 69 74 61 74 69 6f",
      "6e 20 75 6c 6c 61 6d 63 6f 20 6c 61 62 6f 72 69",
      "73 20 6e 69 73 69 20 75 74 20 61 6c 69 71 75 69",
      "70 20 65 78 20 65 61 20 63 6f 6d 6d 6f 64 6f 20",
      "63 6f 6e 73 65 71 75 61 74 2e 20 44 75 69 73 20",
      "61 75 74 65 20 69 72 75 72 65 20 64 6f 6c 6f 72",
      "20 69 6e 20 72 65 70 72 65 68 65 6e 64 65 72 69",
      "74 20 69 6e 20 76 6f 6c 75 70 74 61 74 65 20 76",
      "65 6c 69 74 20 65 73 73 65 20 63 69 6c 6c 75 6d",
      "20 64 6f 6c 6f 72 65 20 65 75 20 66 75 67 69 61",
      "74 20 6e 75 6c 6c 61 20 70 61 72 69 61 74 75 72",
      "2e 20 45 78 63 65 70 74 65 75 72 20 73 69 6e 74",
      "20 6f 63 63 61 65 63 61 74 20 63 75 70 69 64 61",
      "74 61 74 20 6e 6f 6e 20 70 72 6f 69 64 65 6e 74",
      "2c 20 73 75 6e 74 20 69 6e 20 63 75 6c 70 61 20",
      "71 75 69 20 6f 66 66 69 63 69 61 20 64 65 73 65",
      "72 75 6e 74 20 6d 6f 6c 6c 69 74 20 61 6e 69 6d",
      "20 69 64 20 65 73 74 20 6c 61 62 6f 72 75 6d 2e",
      "03 00 00 00 6d 61 70 03 00 00 00 4d 61 70 05 00",
      "00 00 06 00 00 00 73 74 72 69 6e 67 01 00 00 00",
      "6e 06 00 00 00 73 74 72 69 6e 67 05 00 00 00 6e",
      "6f 72 74 68 06 00 00 00 73 74 72 69 6e 67 01 00",
      "00 00 65 06 00 00 00 73 74 72 69 6e 67 04 00 00",
      "00 65 61 73 74 06 00 00 00 73 74 72 69 6e 67 01",
      "00 00 00 73 06 00 00 00 73 74 72 69 6e 67 05 00",
      "00 00 73 6f 75 74 68 06 00 00 00 73 74 72 69 6e",
      "67 01 00 00 00 77 06 00 00 00 73 74 72 69 6e 67",
      "04 00 00 00 77 65 73 74 06 00 00 00 73 74 72 69",
      "6e 67 0d 00 00 00 73 6f 67 67 79 20 77 61 66 66",
      "6c 65 73 06 00 00 00 73 74 72 69 6e 67 0e 00 00",
      "00 6e 65 76 65 72 20 65 61 74 20 74 68 65 6d 03",
      "00 00 00 73 65 74 03 00 00 00 53 65 74 05 00 00",
      "00 06 00 00 00 6e 75 6d 62 65 72 00 00 00 00 00",
      "00 00 40 06 00 00 00 6e 75 6d 62 65 72 00 00 00",
      "00 00 00 08 40 06 00 00 00 6e 75 6d 62 65 72 00",
      "00 00 00 00 00 14 40 06 00 00 00 6e 75 6d 62 65",
      "72 00 00 00 00 00 00 1c 40 06 00 00 00 6e 75 6d",
      "62 65 72 00 00 00 00 00 00 26 40 04 00 00 00 6e",
      "75 6c 6c 04 00 00 00 6e 75 6c 6c 09 00 00 00 75",
      "6e 64 65 66 69 6e 65 64 09 00 00 00 75 6e 64 65",
      "66 69 6e 65 64 06 00 00 00 6f 72 69 67 69 6e 07",
      "00 00 00 56 65 63 74 6f 72 33 00 00 00 00 00 00",
      "00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00",
      "00 00 04 00 00 00 63 75 62 65 04 00 00 00 4d 65",
      "73 68 0c 00 00 00 00 00 00 00 00 00 f0 3f 00 00",
      "00 00 00 00 f0 3f 00 00 00 00 00 00 f0 3f 00 00",
      "00 00 00 00 f0 bf 00 00 00 00 00 00 f0 3f 00 00",
      "00 00 00 00 f0 3f 00 00 00 00 00 00 f0 3f 00 00",
      "00 00 00 00 f0 bf 00 00 00 00 00 00 f0 3f 00 00",
      "00 00 00 00 f0 bf 00 00 00 00 00 00 f0 bf 00 00",
      "00 00 00 00 f0 3f 00 00 00 00 00 00 f0 3f 00 00",
      "00 00 00 00 f0 bf 00 00 00 00 00 00 f0 3f 00 00",
      "00 00 00 00 f0 bf 00 00 00 00 00 00 f0 3f 00 00",
      "00 00 00 00 f0 3f 00 00 00 00 00 00 f0 3f 00 00",
      "00 00 00 00 f0 bf 00 00 00 00 00 00 f0 bf 00 00",
      "00 00 00 00 f0 bf 00 00 00 00 00 00 f0 3f 00 00",
      "00 00 00 00 f0 bf 00 00 00 00 00 00 f0 3f 00 00",
      "00 00 00 00 f0 3f 00 00 00 00 00 00 f0 bf 00 00",
      "00 00 00 00 f0 bf 00 00 00 00 00 00 f0 3f 00 00",
      "00 00 00 00 f0 bf 00 00 00 00 00 00 f0 3f 00 00",
      "00 00 00 00 f0 bf 00 00 00 00 00 00 f0 bf 00 00",
      "00 00 00 00 f0 bf 00 00 00 00 00 00 f0 bf 00 00",
      "00 00 00 00 f0 bf 00 00 00 00 00 00 f0 3f 00 00",
      "00 00 00 00 f0 3f 00 00 00 00 00 00 f0 bf 00 00",
      "00 00 00 00 f0 bf 00 00 00 00 00 00 f0 3f 00 00",
      "00 00 00 00 f0 3f 00 00 00 00 00 00 f0 3f 00 00",
      "00 00 00 00 f0 3f 00 00 00 00 00 00 f0 3f 00 00",
      "00 00 00 00 f0 bf 00 00 00 00 00 00 f0 3f 00 00",
      "00 00 00 00 f0 bf 00 00 00 00 00 00 f0 bf 00 00",
      "00 00 00 00 f0 3f 00 00 00 00 00 00 f0 3f 00 00",
      "00 00 00 00 f0 3f 00 00 00 00 00 00 f0 3f 00 00",
      "00 00 00 00 f0 bf 00 00 00 00 00 00 f0 3f 00 00",
      "00 00 00 00 f0 bf 00 00 00 00 00 00 f0 bf 00 00",
      "00 00 00 00 f0 3f 00 00 00 00 00 00 f0 bf 00 00",
      "00 00 00 00 f0 3f 00 00 00 00 00 00 f0 bf 00 00",
      "00 00 00 00 f0 bf 00 00 00 00 00 00 f0 3f 00 00",
      "00 00 00 00 f0 3f 00 00 00 00 00 00 f0 bf 00 00",
      "00 00 00 00 f0 bf 00 00 00 00 00 00 f0 bf 00 00",
      "00 00 00 00 f0 bf 00 00 00 00 00 00 f0 3f 00 00",
      "00 00 00 00 f0 bf 00 00 00 00 00 00 f0 bf 00 00",
      "00 00 00 00 f0 bf 00 00 00 00 00 00 f0 bf 00 00",
      "00 00 00 00 f0 3f 00 00 00 00 00 00 f0 3f 00 00",
      "00 00 00 00 f0 bf 00 00 00 00 00 00 f0 bf 00 00",
      "00 00 00 00 f0 bf 00 00 00 00 00 00 f0 bf 00 00",
      "00 00 00 00 f0 bf 00 00 00 00 00 00 f0 3f 00 00",
      "00 00 00 00 f0 bf 00 00 00 00 00 00 f0 3f 00 00",
      "00 00 00 00 f0 bf 00 00 00 00 00 00 f0 bf 00 00",
      "00 00 00 00 f0 bf 00 00 00 00 00 00 f0 bf 00 00",
      "00 00 00 00 f0 bf 00 00 00 00 00 00 f0 3f 00 00",
      "00 00 00 00 f0 3f 00 00 00 00 00 00 f0 3f 00 00",
      "00 00 00 00 f0 3f 00 00 00 00 00 00 f0 bf 00 00",
      "00 00 00 00 f0 3f 00 00 00 00 00 00 f0 3f 00 00",
      "00 00 00 00 f0 3f 00 00 00 00 00 00 f0 3f 00 00",
      "00 00 00 00 f0 bf 00 00 00 00 00 00 f0 3f 00 00",
      "00 00 00 00 f0 3f 00 00 00 00 00 00 f0 bf 00 00",
      "00 00 00 00 f0 bf 00 00 00 00 00 00 f0 3f 00 00",
      "00 00 00 00 f0 3f 00 00 00 00 00 00 f0 bf 00 00",
      "00 00 00 00 f0 3f 00 00 00 00 00 00 f0 bf 00 00",
      "00 00 00 00 f0 3f ",
    ],
}
`;
